--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,9 @@ const description =
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/src/assets/favicon.ico" />
     <meta name="generator" content={generator} />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flowbite@1.0.3/dist/flowbite.css" integrity="sha256-ZosIv1LslbE9aOGl5dE/yo7wL3bLCrFmPF26QSIb/vE=" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.js" defer></script>
+
 
     <title>CMRIT-MUN</title>
     <meta name="description" content={description} />
