changes in the EB and secretariat

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -61,8 +61,8 @@ const features: Array<FeatureItem> = [
       "The International Press Committee in Model United Nations reports on conference proceedings. Participants, embodying journalists and media personnel, gather information, conduct interviews, and produce news articles and multimedia content. This vital role disseminates information, fosters dialogue, and documents diverse perspectives and diplomatic efforts, contributing to the Model UN conference.",
     icon: "mdi:camera",
     popup_title: "IP Agenda",
-    popup_agenda1: "No Agenda",
-    popup_agenda2: "No Agenda",
+    popup_agenda1: "",
+    popup_agenda2: "",
     executive1:"Preethi Polu",
     executive2:"Akanksha Saxena",
   },
