removal of WB committee

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,7 +5,8 @@ import type { NavItem } from "~/types";
 const navItems: Array<NavItem> = [
   // Changed the order of NAV bar
   { title: "About", url: "#about" }, 
-  { title: "Committee", url: "#committee" },
+  { title: "Committees", url: "#committee" },
+ // { title: "Itinerary", url: "#itinerary" },
   { title: "Secretariat", url: "#secretariat" },
   { title: "FAQ", url: "#FAQ" },
   {title: "Contact Us", url: "#contact" }
