--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Showcase from "~/components/showcase.astro";
 import Splash from "~/components/splash.astro";
 import FAQ from "~/components/FAQ.astro";
 import Contact from "~/components/Contact.astro";
+// import Itinerary from "~/components/Itinerary.astro";
 import "~/styles/index.css"; 
 
 const { generator, site } = Astro;
@@ -69,6 +70,7 @@ const description =
     <div class="space-y-24 px-8 py-32">
       <Intro />
       <Features />
+      <!-- <Itinerary /> -->
       <Showcase />
       <FAQ/>
     <Contact/>
