--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -52,3 +52,128 @@
 .grid-item:hover .overlay {
   opacity: 1;
 }
+
+/* Responsive adjustments for 400x620 */
+@media (max-width: 400px) and (max-height: 620px) {
+  .overlay {
+    bottom: 10%; /* Adjust for smaller screens */
+  }
+}
+
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 100px auto;
+}
+
+.container1 {
+  padding: 10px 50px;
+  position: relative;
+  width: 90%;
+  animation: movedown 1s linear forwards;
+  opacity: 0;
+}
+
+@keyframes movedown {
+  0% {
+    opacity: 1;
+    transform: translateY(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+.text-box {
+  padding: 20px 40px;
+  padding-right: 90px; /* Adjusted padding to increase width */
+  background: #fff;
+  position: relative;
+  border-radius: 6px;
+  font-size: 12px;
+  text-align: left;
+  width: 100%; /* Ensures the box takes 100% width */
+}
+
+.itwords {
+  color: black;
+}
+
+.left-container {
+  left: -41%;
+}
+
+.right-container {
+  left: 50%;
+}
+
+#sumn {
+  position: absolute;
+  width: 40px;
+  border-radius: 50%;
+  right: -29px;
+  z-index: 10;
+  top: 32px;
+}
+
+#sumn1 {
+  position: absolute;
+  left: -20px;
+}
+
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 100%;
+  background-color: rgba(0, 23, 74, 255);
+  top: 0;
+  left: 50%;
+  margin-left: -3px;
+  z-index: -1;
+  animation: moveline 4s linear forwards;
+}
+
+@keyframes moveline {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 100;
+  }
+}
+
+.lca {
+  height: 0;
+  width: 0;
+  position: absolute;
+  top: 28px;
+  z-index: 1;
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-left: 15px solid violet;
+  right: -15px;
+}
+
+.rca {
+  height: 0;
+  width: 0;
+  position: absolute;
+  top: 28px;
+  z-index: 1;
+  border-top: 15px solid transparent;
+  border-bottom: 15px solid transparent;
+  border-right: 15px solid violet;
+  left: -15px;
+}
+
+.container1:nth-child(1) {
+  animation-delay: 0s;
+}
+.container1:nth-child(2) {
+  animation-delay: 1s;
+}
+.container1:nth-child(3) {
+  animation-delay: 2s;
+}
